--- a/apps/user-service/tsconfig.app.json
+++ b/apps/user-service/tsconfig.app.json
@@ -4,6 +4,6 @@
     "declaration": false,
     "outDir": "../../dist/apps/user-service"
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "../../libs/**/*"],
   "exclude": ["node_modules", "dist", "test", "**/*spec.ts"]
 }
