로그인 횟수 카운팅 기능 구현
- 로그인 횟수 카운팅 기능 구현.
- Management service가 담당.
- 다른 서비스들은 Redis 접근을 위해 카프카 이벤트 발행

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,8 +21,13 @@
     "strictBindCallApply": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
-      "@libs/types": ["libs/types/index.ts"]
+      "@libs/types": [
+        "libs/types/index.ts"
+      ]
     }
   },
-  "include": ["apps/**/*", "libs/**/*"]
+  "include": [
+    "apps/**/*",
+    "libs/**/*"
+  ]
 }
