--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -29,6 +29,17 @@ services:
       retries: 10
       start_period: 30s
 
+  redis:
+    image: redis:7-alpine
+    container_name: redis-dev
+    ports:
+      - "6379:6379"
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 5s
+      timeout: 3s
+      retries: 5
+
   kafka-init:
     image: confluentinc/cp-kafka:7.5.0
     container_name: kafka-init-dev
@@ -84,4 +95,28 @@ services:
     depends_on:
       kafka-init:
         condition: service_completed_successfully
+    restart: on-failure
+
+  management-service:
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
+      args:
+        APP_NAME: management-service
+    container_name: management-service-dev
+    environment:
+      KAFKA_BROKER: kafka:29092
+      REDIS_HOST: redis
+      REDIS_PORT: 6379
+    volumes:
+      - ./apps/management-service:/app/apps/management-service
+      - ./libs:/app/libs
+      - ./tsconfig.json:/app/tsconfig.json
+      - ./tsconfig.build.json:/app/tsconfig.build.json
+      - ./nest-cli.json:/app/nest-cli.json
+    depends_on:
+      kafka-init:
+        condition: service_completed_successfully
+      redis:
+        condition: service_healthy
     restart: on-failure
