--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/microservices": "^11.1.10",
     "@nestjs/platform-express": "^11.0.1",
     "cookie-parser": "^1.4.7",
+    "ioredis": "^5.8.2",
     "kafkajs": "^2.2.4",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
@@ -41,6 +42,7 @@
     "@nestjs/testing": "^11.0.1",
     "@types/cookie-parser": "^1.4.10",
     "@types/express": "^5.0.0",
+    "@types/ioredis": "^4.28.10",
     "@types/jest": "^30.0.0",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
