shtmYyyy 설정 및 조회 가능
- shtm, yyyy 값을 admin이 설정 가능.
- shtm, yyyy 값을 사용자 정보 반환시에 같이 반환.
- 반환된 shtm, yyyy 이용해서 기본적인 강의 정보 조회 가능.
- 여석 정보 보강 완료.

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -123,3 +123,23 @@ services:
       redis:
         condition: service_healthy
     restart: unless-stopped
+
+  parsing-service:
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
+      args:
+        APP_NAME: parsing-service
+    container_name: parsing-service-dev
+    environment:
+      KAFKA_BROKER: kafka:29092
+    volumes:
+      - ./apps/parsing-service:/app/apps/parsing-service
+      - ./libs:/app/libs
+      - ./tsconfig.json:/app/tsconfig.json
+      - ./tsconfig.build.json:/app/tsconfig.build.json
+      - ./nest-cli.json:/app/nest-cli.json
+    depends_on:
+      kafka-init:
+        condition: service_completed_successfully
+    restart: unless-stopped
