로깅 서비스 추가
- 과목 검색 결과 로깅.
- dayjs 이용해서 날짜 포매팅되도록 구현.
- 로깅 파일이 기록되는 곳은 마운트 되도록 docker-compose에서 설정.

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -160,6 +160,27 @@ services:
         condition: service_completed_successfully
     restart: unless-stopped
 
+  logging-service:
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
+      args:
+        APP_NAME: logging-service
+    container_name: logging-service-dev
+    environment:
+      KAFKA_BROKER: kafka:29092
+    volumes:
+      - ./apps/logging-service:/app/apps/logging-service
+      - ./libs:/app/libs
+      - ./tsconfig.json:/app/tsconfig.json
+      - ./tsconfig.build.json:/app/tsconfig.build.json
+      - ./nest-cli.json:/app/nest-cli.json
+      - ./logs:/app/logs
+    depends_on:
+      kafka-init:
+        condition: service_completed_successfully
+    restart: unless-stopped
+
   board-service:
     build:
       context: .
