--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
     "cookie-parser": "^1.4.7",
+    "dayjs": "^1.11.19",
     "ioredis": "^5.8.2",
     "kafkajs": "^2.2.4",
     "pg": "^8.16.3",
