api-gateway 토픽 생성 이슈 해결
- kafka가 완전히 준비된 이후에 토픽 생성을 시도하도록 헬스체크 과정 수정.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,11 +21,14 @@ services:
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
       CLUSTER_ID: MkU3OEVBNTcwNTJENDM2Qk
+      # 안정성 설정 (dev와 동일)
+      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
     healthcheck:
       test: ["CMD", "kafka-broker-api-versions", "--bootstrap-server", "localhost:9092"]
       interval: 10s
       timeout: 10s
-      retries: 5
+      retries: 10
+      start_period: 30s
 
   kafka-init:
     image: confluentinc/cp-kafka:7.5.0
