--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -91,6 +91,7 @@ services:
       KAFKA_BROKER: kafka:29092
       PORT: 3000
       JWT_SECRET: ${JWT_SECRET}
+      CORS_ORIGIN: ${CORS_ORIGIN}
     depends_on:
       kafka-init:
         condition: service_completed_successfully
